# saferouter

./: .env.example  .gitignore  Caddyfile  LICENSE  Makefile  README.md  docker-compose.yml  install.sh
.github/workflows/: build-cli.yml  test.yml
cli/: Cargo.toml
cli/src/: config.rs  docker.rs  error.rs  lib.rs  main.rs
cli/tests/: integration_test.rs
infrastructure/kubernetes/: ingress.yaml  namespace.yaml  ner-deployment.yaml  proxy-deployment.yaml  secrets.yaml  vault-deployment.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/monitoring/grafana-dashboards/: proxy-metrics.json
services/dashboard/: .dockerignore  .env.example  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
services/dashboard/public/: robots.txt
services/dashboard/src/: App.tsx  index.css
services/dashboard/src/components/: CTA.tsx  Demo.tsx  ErrorBoundary.tsx  Features.tsx  Footer.tsx  Hero.tsx  LoadingSpinner.tsx  Pricing.tsx  Stats.tsx  Testimonials.tsx
services/dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  textarea.tsx
services/dashboard/src/utils/: analytics.ts
services/ner-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/ner-service/data/: legal_ner.json  medical_ner.json
services/ner-service/tests/: test_ner.py
services/proxy/: Dockerfile  go.mod  go.sum
services/proxy/cmd/: main.go
services/proxy/internal/config/: config.go
services/proxy/internal/handlers/: health.go  health_test.go  proxy.go  proxy_test.go
services/proxy/internal/middleware/: middleware.go  middleware_test.go
services/proxy/internal/models/: types.go
services/proxy/internal/services/: interfaces.go  llm_client.go  ner_client.go  vault_client.go
services/vault/: Cargo.toml  Dockerfile
services/vault/src/: lib.rs  main.rs
services/vault/tests/: integration_test.rs
