[package]
name = "saferoute"
version = "1.0.0"
edition = "2024"
authors = ["SafeRoute Team"]
description = "Zero-knowledge privacy proxy CLI"
license = "MIT"

[[bin]]
name = "saferoute"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
colored = "3.0.0"
indicatif = "0.18.3"
dialoguer = "0.12.0"
dirs = "6.0.0"
anyhow = "1.0.100"
