[project]
name = "saferoute-ner"
version = "1.0.0"
description = "SafeRoute NER Service - Ultra-fast PII detection"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "numpy>=2.4.0",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "black>=25.12.0",
    "ruff>=0.14.10",
]
