[package]
name = "vault"
version = "1.0.0"
edition = "2025"

[dependencies]
actix-web = "4.12.1"
actix-rt = "2.11.0"
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
ring = "0.17.14"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.8"
thiserror = "2.0.9"

[dev-dependencies]
actix-web-test = "0.1.5"
